# hotupdate_server

./: Cargo.toml  README.md
project/test/: test.json
server/: main.go
src/: data.rs  gui.rs  main.rs
