[package]
name = "hotupdate_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe ="0.23.0"
env_logger = "0.10.0"
native-dialog = "0.6.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1"
warp="0.3.1"
tokio="1.12.0"
